--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="dbeng">
+    <wb-module deploy-name="muster">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="dbeng"/>
-        <property name="java-output-path" value="/dbeng/build/classes"/>
+        <property name="context-root" value="muster"/>
+        <property name="java-output-path" value="/muster/build/classes"/>
     </wb-module>
 </project-modules>
