--- a/javascript/style.css
+++ b/javascript/style.css
@@ -1,10 +1,18 @@
+body {
+  font-size:0.85em;
+  font-family:Arial, Helvetica, sans-serif;
+}
+
 tr:nth-child(odd) {
   background:#ddd;
 }
+
 td {
   min-width:8em;
   padding:0.5em 1em;
 }
+
 th {
   font-family:sans-serif;
 }
+
